// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`when domain entity extension has duplicate property name should have validation failures(): when domain entity extension has duplicate property name should have validation failure -> message 1`] = `"Domain Entity Extension EntityName redeclares property DuplicatePropertyName of base Domain Entity."`;

exports[`when domain entity extension has duplicate property name should have validation failures(): when domain entity extension has duplicate property name should have validation failure -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 12,
  "tokenText": "bool",
}
`;

exports[`when domain entity extension has multiple duplicates should have validation failures(): when domain entity extension has multiple duplicates should have validation failure -> message 1`] = `"Domain Entity Extension EntityName redeclares property DuplicatePropertyName1 of base Domain Entity."`;

exports[`when domain entity extension has multiple duplicates should have validation failures(): when domain entity extension has multiple duplicates should have validation failure -> message 2`] = `"Domain Entity Extension EntityName redeclares property DuplicatePropertyName2 of base Domain Entity."`;

exports[`when domain entity extension has multiple duplicates should have validation failures(): when domain entity extension has multiple duplicates should have validation failure -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 16,
  "tokenText": "bool",
}
`;

exports[`when domain entity extension has multiple duplicates should have validation failures(): when domain entity extension has multiple duplicates should have validation failure -> sourceMap 2`] = `
Object {
  "column": 4,
  "line": 20,
  "tokenText": "bool",
}
`;

exports[`when domain entity subclass and extension have duplicate property name should have validation failures(): when domain entity extension has duplicate property name should have validation failure -> message 1`] = `"Domain Entity Extension SubclassEntityName redeclares property DuplicatePropertyName of base Domain Entity Subclass."`;

exports[`when domain entity subclass and extension have duplicate property name should have validation failures(): when domain entity extension has duplicate property name should have validation failure -> sourceMap 1`] = `
Object {
  "column": 4,
  "line": 19,
  "tokenText": "bool",
}
`;
